# www.xueyigou.cn

./: .gitignore  Cargo.toml  README.md  diesel进行数据库迁移说明.md  env  xueyigou-old.sql  xueyigou.sql  数据库设计.sql  新数据库public.sql
migrations/2021-05-16-122122_users_sessions/: up.sql
migrations/2021-11-02-085453_approve/: down.sql  up.sql
migrations/2021-11-20-123715_goods/: down.sql  up.sql
migrations/2022-02-18-151712_banners/: up.sql
migrations/2022-02-18-164108_customized_services/: down.sql  up.sql
migrations/2022-02-18-165109_index_works/: down.sql  up.sql
migrations/2022-02-18-165455_honor/: down.sql  up.sql
migrations/2022-02-19-022610_public_welfare/: down.sql  up.sql
src/: common.rs  db.rs  filters.rs  main.rs  multipart_form.rs  schema.rs  session.rs  template.rs
src/handlers/: approve_handler.rs  goods_handler.rs  home_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  settings_handler.rs  signup_handler.rs  test_handler.rs
src/models/: admin_model.rs  approve_model.rs  banners_model.rs  customized_services.rs  honor_model.rs  index_works_model.rs  link_model.rs  mod.rs  public_welfare_model.rs  register_model.rs  user_model.rs
src/routes/: approve_route.rs  goods_route.rs  home_route.rs  link_route.rs  login_route.rs  logout_route.rs  mod.rs  settings_route.rs  signup_route.rs  test_route.rs
src/views/: approve_company.html  approve_designer.html  approve_test.html  frame.html  frame_base.html  goods_virtual.html  index.html  is_login.html  login.html  logout.html  qualification_company.html  qualification_designer.html  refresh.html  security.html  signup.html  test.html
(+254 files in other folders)
